packages/core/src/theme-default/components/Sidebar/index.module.scss
.sidebar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  z-index: var(--rp-z-index-sidebar);
  padding: 12px 12px 96px 16px;
  width: calc(100vw - 64px);
  max-width: 320px;
  background-color: var(--rp-c-bg);
  opacity: 0;
  transform: translateX(-100%);
  transition: opacity 0.5s, transform 0.25s ease;
}

.sidebarContent {
  overflow-x: hidden;
}

:global(.dark) .sidebar {
  box-shadow: var(--rp-shadow-1);
}

.sidebar.open {
  opacity: 1;
  visibility: visible;
  transform: translateX(0);
  transition: opacity 0.25s, transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
}

@media (min-width: 960px) {
  .sidebar {
    z-index: 0;
    margin-top: calc(var(--rp-nav-height));
    padding-bottom: 128px;
    opacity: 1;
    visibility: visible;
    width: var(--rp-sidebar-width);
    transform: translateX(0);
    box-shadow: var(--rp-c-shadow-3);
    mask-image: linear-gradient(transparent, #000 20px),
      linear-gradient(270deg, #000 10px, transparent 0);
    --webkit-mask-image: linear-gradient(270deg, #000 10px, transparent 0);
  }
}

@media (min-width: 1440px) {
  .sidebar {
    padding-left: 16px;
    width: var(--rp-sidebar-width);
    margin-left: calc((100vw - 1440px) / 2);
  }
}

.menuLink {
  opacity: 1;
}

.menuLink:hover {
  color: inherit;
  transition: all 0.2s;
}

.menuItem:hover {
  background-color: var(--rp-c-bg-mute);
  transition: all 0.2s;
}

.collapseContainer:hover {
  background-color: rgba(229, 229, 229, 0.4);
  transition: all 0.2s;
}

:global(.dark) .menuItem:hover,
:global(.dark) .collapseContainer:hover {
  background-color: var(--rp-c-bg-mute);
  transition: all 0.2s;
}

.menuItem,
.menuItemStatic,
.menuItemActive {
  font-size: 13px;
  line-height: 19px;
}

.menuItem,
.menuItemStatic {
  color: var(--rp-c-text-2);
  transition: all 0.2s;
}

.menuItemActive {
  background-color: var(--rp-c-brand-tint);
  color: var(--rp-c-brand);
  font-weight: bolder;
}

:global(.rspress-sidebar-group) {
  position: relative;
  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: 12px;
    width: 1px;
    height: 100%;
    background-color: var(--rp-c-gray-light-4);
  }
}

